--- a/src/views/templates/confirm-email.ejs
+++ b/src/views/templates/confirm-email.ejs
@@ -1,373 +1,120 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <style type="text/css">
-      @media screen {
-        @font-face {
-          font-family: 'Lato';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Lato Regular'), local('Lato-Regular'),
-            url(https://fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff)
-              format('woff');
-        }
-
-        @font-face {
-          font-family: 'Lato';
-          font-style: normal;
-          font-weight: 700;
-          src: local('Lato Bold'), local('Lato-Bold'),
-            url(https://fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff)
-              format('woff');
-        }
-
-        @font-face {
-          font-family: 'Lato';
-          font-style: italic;
-          font-weight: 400;
-          src: local('Lato Italic'), local('Lato-Italic'),
-            url(https://fonts.gstatic.com/s/lato/v11/RYyZNoeFgb0l7W3Vu1aSWOvvDin1pK8aKteLpeZ5c0A.woff)
-              format('woff');
-        }
-
-        @font-face {
-          font-family: 'Lato';
-          font-style: italic;
-          font-weight: 700;
-          src: local('Lato Bold Italic'), local('Lato-BoldItalic'),
-            url(https://fonts.gstatic.com/s/lato/v11/HkF_qI1x_noxlxhrhMQYELO3LdcAZYWl9Si6vvxL-qU.woff)
-              format('woff');
-        }
-      }
-
-      /* CLIENT-SPECIFIC STYLES */
-      body,
-      table,
-      td,
-      a {
-        -webkit-text-size-adjust: 100%;
-        -ms-text-size-adjust: 100%;
-      }
-
-      /* table,
-      td {
-        mso-table-lspace: 0pt;
-        mso-table-rspace: 0pt;
-      } */
-
-      img {
-        -ms-interpolation-mode: bicubic;
-      }
-
-      /* RESET STYLES */
-      img {
-        border: 0;
-        height: auto;
-        line-height: 100%;
-        outline: none;
-        text-decoration: none;
-      }
-
-      table {
-        border-collapse: collapse !important;
-      }
-
-      body {
-        height: 100% !important;
-        margin: 0 !important;
-        padding: 0 !important;
-        width: 100% !important;
-      }
-
-      /* iOS BLUE LINKS */
-      a[x-apple-data-detectors] {
-        color: inherit !important;
-        text-decoration: none !important;
-        font-size: inherit !important;
-        font-family: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-      }
-
-      /* MOBILE STYLES */
-      @media screen and (max-width: 600px) {
-        h1 {
-          font-size: 32px !important;
-          line-height: 32px !important;
-        }
-      }
-
-      /* ANDROID CENTER FIX */
-      div[style*='margin: 16px 0;'] {
-        margin: 0 !important;
-      }
-    </style>
-  </head>
-
-  <body
-    style="
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Confirm Your Account</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary-color: #691f74;
+      --primary-color-dark: #44195d; 
+      --body-background-color: #f4f4f4;
+      --text-color: #333;
+      --text-light-color: #666;
+    }
+    @font-face {
+      font-family: 'Poppins';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Poppins Regular'), local('Poppins-Regular'), url(https://fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLDz8Z1xlFQ.woff2) format('woff2');
+    }
+    /* Add your styles here */
+    body {
+      font-family: 'Poppins', Arial, sans-serif;
       background-color: #f4f4f4;
-      margin: 0 !important;
-      padding: 0 !important;
-    "
-  >
-    <!-- HIDDEN PREHEADER TEXT -->
-    <div
-      style="
-        display: none;
-        font-size: 1px;
-        color: #fefefe;
-        line-height: 1px;
-        font-family: 'Lato', Helvetica, Arial, sans-serif;
-        max-height: 0px;
-        max-width: 0px;
-        opacity: 0;
-        overflow: hidden;
-      "
-    >
-      We're thrilled to have you here! Get ready to dive into your new account.
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 600px;
+      margin: 20px auto;
+      background-color: #fff;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border: #333;
+    }
+    .banner {
+      background-color: #44195d;
+      text-align: center;
+      padding: 20px;
+      color: white;
+      border-radius: 12px;
+    }
+    h2 {
+      color: #333;
+    }
+    a {
+      color: #691f74;
+    }
+    p {
+      color: #333;
+      opacity: 0.8;
+      font-weight: 400;
+    }
+    .btn {
+      display: inline-block;
+      padding: 16px 26px;
+      font-weight: 600;
+      background-color: #691f74;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 35px;
+      margin: 20px 0;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #44195d;
+    }
+     /* Social icons */
+   .social-icons {
+      margin-top: 30px;
+     text-align: center;
+    }
+    .social-icons a {
+      display: inline-block;
+      margin: 0 10px;
+      font-size: 20px;
+      color: #333;
+      text-decoration: none;
+    }
+    .fa-linkedin {
+      color: #0A66C2;
+    }
+    .fa-facebook {
+      color: #0866FF;
+    }
+    .fa-github {
+      color: #010409;
+    }
+    .fa-twitter {
+      color: #1D9BF0;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="banner"> 
+      <h1>Welcome to Jobster</h1>
     </div>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-      <!-- LOGO -->
-      <tr>
-        <td bgcolor="#44195D" align="center">
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                align="center"
-                valign="top"
-                style="padding: 40px 10px 40px 10px"
-              ></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td bgcolor="#44195D" align="center" style="padding: 0px 10px 0px 10px">
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                bgcolor="#ffffff"
-                align="center"
-                valign="top"
-                style="
-                  padding: 40px 20px 20px 20px;
-                  border-radius: 4px 4px 0px 0px;
-                  color: #111111;
-                  font-family: 'Lato', Helvetica, Arial, sans-serif;
-                  font-size: 48px;
-                  font-weight: 400;
-                  letter-spacing: 4px;
-                  line-height: 48px;
-                "
-              >
-                <h1 style="font-size: 48px; font-weight: 400; margin: 2">
-                  Welcome to Jobster!
-                </h1>
-                <img
-                  src=" https://img.icons8.com/clouds/100/000000/handshake.png"
-                  width="125"
-                  height="120"
-                  style="display: block; border: 0px"
-                />
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px">
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                bgcolor="#ffffff"
-                align="left"
-                style="
-                  padding: 20px 30px 40px 30px;
-                  color: #666666;
-                  font-family: 'Lato', Helvetica, Arial, sans-serif;
-                  font-size: 18px;
-                  font-weight: 400;
-                  line-height: 25px;
-                "
-              >
-                <p style="margin: 0">
-                 Hi <%= name %>
-                </p>
-                <p style="margin: 0">
-                  We're excited to have you get started. First, you need to
-                  confirm your account. Just press the button below.
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td bgcolor="#ffffff" align="left">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                  <tr>
-                    <td
-                      bgcolor="#ffffff"
-                      align="center"
-                      style="padding: 20px 30px 60px 30px"
-                    >
-                      <table border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                          <td
-                            align="center"
-                            style="border-radius: 50rem"
-                            bgcolor="#44195D"
-                          >
-                            <a
-                              href="<%= confirmationURL %>"
-                              target="_blank"
-                              style="
-                                font-size: 20px;
-                                font-family: Helvetica, Arial, sans-serif;
-                                color: #ffffff;
-                                text-decoration: none;
-                                color: #ffffff;
-                                text-decoration: none;
-                                padding: 15px 25px;
-                                border-radius: 100px;
-                                border: 1px solid #44195D;
-                                display: inline-block;
-                              "
-                              >Confirm Account</a
-                            >
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <!-- COPY -->
-            <tr>
-              <td
-                bgcolor="#ffffff"
-                align="left"
-                style="
-                  padding: 0px 30px 40px 30px;
-                  border-radius: 0px 0px 4px 4px;
-                  color: #666666;
-                  font-family: 'Lato', Helvetica, Arial, sans-serif;
-                  font-size: 18px;
-                  font-weight: 400;
-                  line-height: 25px;
-                "
-              >
-                <p style="margin: 0">Cheers,<br />Jobster Team</p>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td
-          bgcolor="#f4f4f4"
-          align="center"
-          style="padding: 30px 10px 0px 10px"
-        >
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                bgcolor="#F0E9F1"
-                align="center"
-                style="
-                  padding: 30px 30px 30px 30px;
-                  border-radius: 4px 4px 4px 4px;
-                  color: #666666;
-                  font-family: 'Lato', Helvetica, Arial, sans-serif;
-                  font-size: 18px;
-                  font-weight: 400;
-                  line-height: 25px;
-                "
-              >
-                <h2
-                  style="
-                    font-size: 20px;
-                    font-weight: 400;
-                    color: #111111;
-                    margin: 0;
-                  "
-                >
-                  Need more help?
-                </h2>
-                <p style="margin: 0">
-                  <a href="#" target="_blank" style="color: #44195D"
-                    >We&rsquo;re here to help you out</a
-                  >
-                </p>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px">
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                bgcolor="#f4f4f4"
-                align="left"
-                style="
-                  padding: 0px 30px 30px 30px;
-                  color: #666666;
-                  font-family: 'Lato', Helvetica, Arial, sans-serif;
-                  font-size: 14px;
-                  font-weight: 400;
-                  line-height: 18px;
-                "
-              >
-                <br />
-                <p style="margin: 0">
-                  If these emails get annoying, please feel free to
-                  <a
-                    href="#"
-                    target="_blank"
-                    style="color: #111111; font-weight: 700"
-                    >unsubscribe</a
-                  >.
-                </p>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-  </body>
+    <h2>Confirm Your Account</h2>
+    <p>Hi <%= name %>,</p>
+    <p>Welcome to Jobster! We're thrilled to have you on board. </br>
+      To get started, please click the button below to confirm your email address:</p>
+    <a href="<%= confirmationURL %>" class="btn" style="color: #fff;">Confirm Account</a>
+    <p>If the button above doesn't work, you can also confirm your account by copying and pasting the following link into your browser:</p>
+    <a href="<%= confirmationURL %>" style="color: #691f74;"><%= confirmationURL %></a>
+    <p>Thank you for choosing Jobster. </br> If you have any questions, feel free to contact us at support@jobster.com</p>
+
+ <!-- Social icons -->
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+    </div>
+  </div>
+
+<script src="https://kit.fontawesome.com/your-fontawesome-kit-id.js" crossorigin="anonymous"></script>
+</body>
 </html>
